# TwinkleGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui-context-invalid问题汇总.md  imgui.ini  linux.toolchain.cmake  mac.toolchain.cmake  twShading.cpp  vcpkg+cmake+vscode问题汇总.md  vcpkg+cmake基本配置.md  vcpkg.json  win.toolchain.cmake
Assets/Materials/: standard.xml
Assets/Shaders/: basicGeometry.frag  basicGeometry.vert  basic_geometry.frag  basic_geometry.vert  cube.frag  cube.vert  firstTriangle.frag  firstTriangle.vert  first_triangle.frag  first_triangle.vert  infinitePlane.frag  infinitePlane.vert  infinite_plane.frag  infinite_plane.vert  line.frag  line.geom  line.vert  msaaResolve.frag  msaa_resolve.frag  msaa_resolve.vert  projectionTexture.frag  projectionTexture.vert  projtex.frag  projtex.vert  projtex_quad.frag  projtex_quad.vert  screenquad.frag  screenquad.vert  skybox.frag  skybox.vert  sphere.frag  sphere.vert  sprite.frag  sprite.vert  sprite1D.frag  sprite_1d.frag  standard.frag  standard.vert  volumn.vert  volumnQuad.frag  (+3 more)
Assets/Shaders/GLSLIncludes/: common.glsl  fragCommon.glsl  lighting.glsl  shaderVariables.glsl  shadow.glsl  (+2 more)
Assets/Textures/: grid.dds
Common/: CMakeLists.txt  twCamera.cpp  twCamera.h  twCameraControl.h  twCommon.h  twDeferredPipeline.cpp  twDeferredPipeline.h  twDynLib.cpp  twDynLib.h  twFirstPersonControl.cpp  twFirstPersonControl.h  twForwardPipeline.cpp  twForwardPipeline.h  twGeometry.cpp  twGeometry.h  twHWBuffers.h  twImage.cpp  twImage.h  twMainWindow.cpp  twMainWindow.h  twMaterial.cpp  twMaterial.h  twMaterialInstance.h  twMesh.cpp  twMesh.h  twMeshRenderer.cpp  twMeshRenderer.h  twObject.hpp  twOrbitControl.cpp  twOrbitControl.h  twPlugin.cpp  twPlugin.h  twPluginManager.cpp  twPluginManager.h  twReference.hpp  twRenderContext.cpp  twRenderContext.h  twRenderPipeline.cpp  twRenderPipeline.h  twRenderTexture.cpp  (+23 more)
Include/Common/: twBVH.h  twBoundingVolume.h  twCamera.h  twCameraControl.h  twCommon.h  twConsoleLog.h  twDeferredPipeline.h  twDynLib.h  twFirstPersonControl.h  twForwardPipeline.h  twFrustum.h  twGeometry.h  twHWBuffers.h  twHWObject.h  twImage.h  twImageManager.h  twLambdaTraits.h  twLight.h  twMainWindow.h  twMaterial.h  twMaterialInstance.h  twMesh.h  twMeshRenderer.h  twModel.h  twModelManager.h  twModelReader.h  twObject.h  twOrbitControl.h  twPlugin.h  twPluginManager.h  twReaderManager.h  twReference.h  twRenderContext.h  twRenderDevice.h  twRenderDeviceInterface.h  twRenderGraph.h  twRenderPipeline.h  twRenderTexture.h  twResource.h  twResourceManager.h  (+17 more)
Include/Editor/: twAssetsWindow.h  twEditor.h  twEditorMenu.h  twEditorWindow.h  twHierarchy.h  twInspector.h  twUiUtil.h
Include/Entry/: twApplication.h
Include/Event/: twCloseEventArgs.h  twCursorEventArgs.h  twEvent.h  twEventArgs.h  twEventHandler.h  twEventManager.h  twFocusEventArgs.h  twInput.h  twInputEventArgs.h  twKeyEventArgs.h  twMouseEventArgs.h  twResizeEventArgs.h  twScrollEvetnArg.h
Include/UI/: twAbstractLayout.h  twCustomFont_1.cpp  twCustomFont_1.h  twCustomImGuiFileDialogConfig.h  twDockSpaceLayout.h  twDockingWidget.h  twHierarchy.h  twInspector.h  twMainFrame.h  twMainWindow.h  twSizePolicy.h  twUiUtil.h  twViewWindow.h  twWidget.h  twWindow.h
Include/Util/: twComUtil.h  twGeoUtil.h  twUtil.h
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt  twBoundingVolume.cpp  twCamera.cpp  twCommon.cpp  twConsoleLog.cpp  twDeferredPipeline.cpp  twDynLib.cpp  twFirstPersonControl.cpp  twForwardPipeline.cpp  twFrustum.cpp  twGeometry.cpp  twHWBuffers.cpp  twImage.cpp  twImageManager.cpp  twLight.cpp  twMainWindow.cpp  twMaterial.cpp  twMesh.cpp  twMeshRenderer.cpp  twModel.cpp  twModelManager.cpp  twModelReader.cpp  twOrbitControl.cpp  twPluginManager.cpp  twRenderContext.cpp  twRenderDevice.cpp  twRenderDeviceInterface.cpp  twRenderGraph.cpp  twRenderPipeline.cpp  twRenderTexture.cpp  twResource.cpp  twResourceManager.cpp  twRingBuffer.cpp  twSceneManagement.cpp  twSceneManager.cpp  twSceneNode.cpp  twShader.cpp  twShaderManager.cpp  twSprite.cpp  twTextManager.cpp  (+7 more)
Source/Editor/: twAssetsWindow.cpp  twEditor.cpp  twEditorMenu.cpp  twEditorWindow.cpp  twHierarchy.cpp  twInspector.cpp  twUiUtil.cpp
Source/Editor/GLFW/: twGLFWMainFrame.cpp  twGLFWViewWindow.cpp
Source/Editor/ImGui/: twImGuiContextManager.cpp
Source/Editor/ImGuiDocking/: twDockSpaceLayout.cpp  twDockingWidget.cpp
Source/Entry/: twAppMain.cpp  twApplication.cpp  twEditor.cpp
Source/Event/: CMakeLists.txt  twEventArgs.cpp  twEventHandler.cpp  twEventManager.cpp  twInput.cpp  twInputEventArgs.cpp  twKeyEventArgs.cpp  twMouseEventArgs.cpp
Source/UI/: CMakeLists.txt  twDockSpaceLayout.cpp  twHierarchy.cpp  twInspector.cpp  twMainFrame.cpp  twMainWindow.cpp  twSizePolicy.cpp  twUiUtil.cpp  twViewWindow.cpp  twWidget.cpp  twWindow.cpp
Source/UI/GLFW/: twGLFWMainFrame.cpp  twGLFWViewWindow.cpp  twViewWindow.cpp
Source/Util/: CMakeLists.txt  twComUtil.cpp  twGeoUtil.cpp  twUtil.cpp
Testbeds/FreeImageOpenGL/: TextureManager.cpp  TextureManager.h
Testbeds/GLFWTestInOSX/: CMakeLists.txt  main.cpp
Testbeds/GLFWTestInOSX/cmake/modules/: FindGLEW.cmake
Testbeds/GTests/: CMakeLists.txt  main.cpp  twBoundingVolumeTest.cpp  twEventTest.cpp  twGTestLog.h  twMaterialTest.cpp  twReaderTest.cpp  twRingBufferTest.cpp  twThreadTest.cpp
TwinkleShading/: CMakeLists.txt  twGLViewPlugin.h  twMainWindow.cpp  twMainWindow.h  twShading.cpp  twView.cpp  twView.h
TwinkleShading/AntiAliasing/: CMakeLists.txt  twAntiAliasing.cpp  twAntiAliasing.h  twAntiAliasingPlugin.cpp
TwinkleShading/BasicGeometry/: CMakeLists.txt  twBasicGeometry.cpp  twBasicGeometry.h  twBasicGeometryPlugin.cpp
TwinkleShading/FirstTriangle/: CMakeLists.txt  twFirstTriangle.cpp  twFirstTriangle.h  twFirstTrianglePlugin.cpp
TwinkleShading/TextureExplore/: CMakeLists.txt  twTextureExplore.cpp  twTextureExplore.h  twTextureExplorePlugin.cpp
cmake/modules/: FindASSIMP.cmake  FindFreeImage.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  freetype.cmake
(+16 files in other folders)
